# penrose

./: .clang-format  .gitignore  meson.build  readme.md
build-vs/: penrose.sln
build-vs/meson-compile/: meson-compile.vcxproj
build-vs/meson-setup/: meson-setup.vcxproj
build-vs/penrose/: penrose.vcxproj
build-vs/penrose-tests/: penrose-tests.vcxproj
demos/: meson.build
demos/ImGuiDemo/: ImGuiDemo.cpp  meson.build
demos/ImGuiDemo/data/: index
demos/SceneDemo/: SceneDemo.cpp  meson.build
demos/SceneDemo/data/: index
include/Penrose/: Api.hpp  Engine.hpp
include/Penrose/Assets/: Asset.hpp  AssetDictionary.hpp  AssetInstance.hpp  AssetLoader.hpp  AssetManager.hpp  AssetManager.inl  AssetReader.hpp  AssetReader.inl  AssetType.hpp  ImageAsset.hpp  ImageAssetFactory.hpp  MeshAsset.hpp  MeshAssetFactory.hpp  ShaderAsset.hpp  ShaderAssetFactory.hpp  UILayoutAsset.hpp
include/Penrose/Builtin/: Glfw.hpp  ImGui.hpp  Vulkan.hpp
include/Penrose/Common/: DoubleVector.hpp  EngineError.hpp  EngineError.inl  Initializable.hpp  Log.hpp  Log.inl  LogLevel.hpp  LogSink.hpp  Params.hpp  ParamsCollection.hpp  Rect.hpp  Size.hpp  StdOutLogSink.hpp  Vertex.hpp
include/Penrose/Core/: Engine.hpp  Log.hpp  Log.inl
include/Penrose/ECS/: Component.hpp  ComponentFactory.hpp  ECSEntry.hpp  ECSManager.hpp  ECSManager.inl  ECSQuery.hpp  Entity.hpp  EntityArchetype.hpp  EntityEntry.hpp  EntityIterator.hpp  EntityManager.hpp  EntityQuery.hpp  System.hpp  SystemManager.hpp  SystemParams.hpp  SystemState.hpp
include/Penrose/Events/: CustomEvent.hpp  ECSEvent.hpp  ECSEvents.hpp  EngineEvent.hpp  EngineEvents.hpp  Event.hpp  EventQueue.hpp  EventQueue.inl  EventType.hpp  InputEvent.hpp  InputEvents.hpp  SurfaceEvent.hpp  SurfaceEvents.hpp
include/Penrose/Input/: Input.hpp  InputHandler.hpp  InputHook.hpp
include/Penrose/Math/: Constants.hpp  NumericFuncs.hpp
include/Penrose/Performance/: Profiler.hpp
include/Penrose/Rendering/: Buffer.hpp  (+51 more)
src/: Constants.hpp  Engine.cpp  Main.cpp  main.cpp
src/Assets/: Asset.hpp  AssetDictionary.cpp  AssetDictionary.hpp  AssetId.hpp  AssetIndex.cpp  AssetIndex.hpp  AssetInstance.cpp  AssetInstance.hpp  AssetLoader.cpp  AssetLoadingJobQueue.cpp  AssetLoadingJobQueue.hpp  AssetLoadingProxy.cpp  AssetLoadingProxy.hpp  AssetManager.cpp  AssetManager.hpp  AssetManagerImpl.cpp  AssetManagerImpl.hpp  AssetReader.cpp  AssetReader.hpp  AssetStructs.hpp  ImageAsset.cpp  MeshAsset.cpp  ShaderAsset.cpp  Structs.hpp  UILayoutAsset.cpp  Utils.cpp  Utils.hpp
src/Backends/: GlfwBackend.cpp  GlfwBackend.hpp  ImGuiBackend.hpp  VulkanBackend.cpp  VulkanBackend.hpp
src/Common/: BitSet.hpp  ConsoleLogSink.cpp  ConsoleLogSink.hpp  JobQueue.cpp  JobQueue.hpp  Lazy.hpp  Lazy.inl  Log.cpp  LogImpl.cpp  LogImpl.hpp  OrderedQueue.hpp  ParamsCollection.cpp  StdOutLogSink.cpp  Types.hpp
src/Core/: Engine.cpp  Engine.hpp  Log.cpp  Resource.hpp  ResourceSet.cpp  ResourceSet.hpp
src/ECS/: ComponentFilterIterator.cpp  ComponentFilterIterator.hpp  ECSBase.cpp  ECSBase.hpp  ECSManager.cpp  ECSManager.hpp  ECSManager.inl  EntityComponentManager.cpp  EntityComponentManager.hpp  EntityFilterIterator.cpp  EntityFilterIterator.hpp  EntityManager.cpp  EntityManagerImpl.cpp  EntityManagerImpl.hpp  EntityQuery.cpp  EntityStore.cpp  EntityStore.hpp  SystemManager.cpp  SystemManagerImpl.cpp  SystemManagerImpl.hpp
src/Events/: Event.cpp  Event.hpp  EventQueue.cpp  EventQueue.hpp
src/Input/: Input.cpp  InputHandler.cpp
src/Performance/: Profiler.cpp
src/Rendering/: DefaultDrawableProvider.cpp  DefaultDrawableProvider.hpp  DefaultRenderer.cpp  DefaultRenderer.hpp  DefaultViewProvider.cpp  DefaultViewProvider.hpp  DeviceContext.cpp  DeviceContext.hpp  DeviceMemoryAllocator.cpp  DeviceMemoryAllocator.hpp  Pass.cpp  Pass.hpp  PipelineInfo.cpp  PresentContext.cpp  PresentContext.hpp  RenderContext.cpp  RenderContext.hpp  RenderContext.inl  RenderData.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderGraphContext.cpp  RenderGraphExecutor.cpp  RenderGraphExecutor.hpp  RenderGraphExecutorProvider.cpp  RenderGraphExecutorProvider.hpp  RenderGraphParser.cpp  RenderGraphParser.hpp  RenderGraphParser.inl  RenderList.hpp  RenderListBuilder.cpp  RenderListBuilder.hpp  RenderListProvider.cpp  RenderListProvider.hpp  RenderManager.cpp  RenderManager.hpp  RenderManagerImpl.cpp  RenderManagerImpl.hpp  RenderThread.cpp  RenderThread.hpp  (+7 more)
src/Resources/: ResourceSet.cpp  ResourceSet.hpp  ResourceSet.inl
src/Scene/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.cpp
src/UI/: Layout.cpp  LayoutFactory.cpp  Property.cpp  UIManager.cpp  Value.cpp  ValueProxy.cpp  WidgetValue.cpp
src/Utils/: DestructibleObject.inl  OptionalUtils.hpp  RangeUtils.hpp  StringifyUtils.hpp  SyncUtils.hpp
subprojects/: tinyobjloader.wrap
tests/: ComplexTests.cpp  EngineTests.cpp  PipelineInfoTests.cpp  SwapchainTests.cpp  TestsMain.cpp  meson.build
tests/data/: index
tests/data/layouts/: root.asset  root.layout.xml
tests/data/shaders/: default-forward-rendering.frag  default-forward-rendering.vert
tests/data/textures/: white-16.asset
tests/src/: Main.cpp
tests/src/Common/: BitSetTests.cpp  OrderedQueueTests.cpp
tests/src/ECS/: TestCountdownSystem.cpp  TestCountdownSystem.hpp  TestLogicTargetComponent.hpp  TestSurfaceResizeSystem.cpp  TestSurfaceResizeSystem.hpp
tests/src/IntTests/ComplexScenes/: OrbitalCamera.cpp  RotatingCamera.cpp
tests/src/IntTests/DebugUI/: DebugUI.cpp
tests/src/IntTests/Engine/: EngineStartStop.cpp  EngineStartWaitStop.cpp
tests/src/IntTests/Rendering/: SwapchainResize.cpp
tests/src/IntegrationTests/ComplexScenes/: LottaObjects.cpp  OrbitalCamera.cpp  Projection.cpp  RotatingCamera.cpp
tests/src/IntegrationTests/DebugUI/: DebugUI.cpp
tests/src/IntegrationTests/Engine/: EngineStartStop.cpp  EngineStartWaitStop.cpp
tests/src/IntegrationTests/Rendering/: SwapchainResize.cpp
tests/src/InteractiveTests/Input/: ImGuiInputHook.cpp  InputReceiving.cpp
tests/src/UnitTests/Math/: NumericFuncs.cpp
tests/src/UnitTests/Rendering/: PipelineInfo.cpp
(+320 files in other folders)
